# bare-opengl

./: CMakeLists.txt  gl3.c
